--- a/voiceter/.classpath
+++ b/voiceter/.classpath
@@ -4,5 +4,10 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry kind="lib" path="C:/Users/Alex/Downloads/commons-net-3.1-bin/commons-net-3.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Alex/Downloads/commons-net-3.1-bin/commons-net-3.1-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Alex/Downloads/commons-net-3.1-bin/commons-net-examples-3.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Alex/Downloads/appengine-java-sdk-1.6.4.1/lib/appengine-remote-api.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Alex/Downloads/appengine-java-sdk-1.6.4.1/lib/appengine-tools-api.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
