--- a/voiceter/AndroidManifest.xml
+++ b/voiceter/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.Sherlock" >
         <activity
-            android:name=".MainVoiceterActivity"
+            android:name=".LoginActivity"
             android:label="@string/app_name"
              android:theme="@style/Theme.Sherlock" >
             <intent-filter>
@@ -23,6 +23,8 @@
             </intent-filter>
          
         </activity>
-    </application>
+	<activity 
+	    android:name=".UserList"></activity>
+</application>
 
 </manifest>
